# LED-Strip-Controller-Octoprint

./: .gitignore  .markdownlint.json  .mega-linter.yaml  .pylintrc  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/: Dependabot.yaml
.github/workflows/: Mega Linter.yaml  Static Analysis.yaml  mega_linter.yaml  release_please.yaml
Communications/: CommsProtocol.py
docs/: Diagrams.drawio
scripts/: README.md  TurnOffLights.sh  TurnOnLights.sh
src/: main.py
src/Communications/: CommsProtocol.py  Types.py
