[project]
name = "octoprint-led-strip-controller-scripts"
version = "0.2.0"
description = "A collection of scripts for controlling the LED Strip Controller in OctoPrint"
requires-python = ">=3.12"
authors = [
    { name = "Scott Gibb", email = "scott.gibb@yahoo.com" }   ]
readme = "README.md"
license = { file = "LICENSE" }